cabal-version:      2.4
name:               elm-chat-server
version:            0.1.0.0
synopsis:           WebSocket server for Elm Chat application
description:        A simple WebSocket server that handles chat messaging for the Elm Examples Hub.
homepage:           https://github.com/stamnostomp/elm-example-sites
license:            MIT
license-file:       ../../LICENSE
author:             Dunedin
maintainer:         example@example.com
category:           Web
build-type:         Simple
extra-source-files: CHANGELOG.md

executable elm-chat-server
    main-is:            Server.hs
    build-depends:      base ^>=4.14.0.0
                      , websockets ^>=0.12.7.3
                      , text ^>=1.2.4.1
                      , aeson ^>=2.0.3.0
                      , containers ^>=0.6.5.1
                      , time ^>=1.11.1.1
    hs-source-dirs:     .
    default-language:   Haskell2010
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
